web/css/site.css
html,body {
    height: 100%;
}

/*SILEX:info
use for all DetailView
\SILEX:info*/
table {
    background-color: #FFF;
}

.wrap {
    min-height: 100%;
    height: auto;
    margin: 0 auto -60px;
    padding: 0 0 60px;
    background: url(../images/background/wallpaper_green.png);
    background-position-x: right;
    background-position-y: bottom;
    background-repeat: no-repeat;
    background-attachment: fixed;

}

.wrap > .container {
    padding: 70px 15px 20px;
}

.footer {
    height: 60px;
    background-color: #f5f5f5;
    border-top: 1px solid #ddd;
    padding-top: 20px;
}

.jumbotron {
    text-align: center;
    background-color: transparent;
    margin-top: 5%;
}

.jumbotron .btn {
    font-size: 21px;
    padding: 14px 24px;
}

.not-set {
    color: #c55;
    font-style: italic;
}

/* add sorting icons to gridview sort links */
a.asc:after, a.desc:after {
    position: relative;
    top: 1px;
    display: inline-block;
    font-family: 'Glyphicons Halflings';
    font-style: normal;
    font-weight: normal;
    line-height: 1;
    padding-left: 5px;
}

a.asc:after {
    content: /*"\e113"*/ "\e151";
}

a.desc:after {
    content: /*"\e114"*/ "\e152";
}

.sort-numerical a.asc:after {
    content: "\e153";
}

.sort-numerical a.desc:after {
    content: "\e154";
}

.sort-ordinal a.asc:after {
    content: "\e155";
}

.sort-ordinal a.desc:after {
    content: "\e156";
}

.grid-view th {
    white-space: nowrap;
}

.hint-block {
    display: block;
    margin-top: 5px;
    color: #999;
}

.error-summary {
    color: #a94442;
    background: #fdf7f7;
    border-left: 3px solid #eed3d7;
    padding: 10px 20px;
    margin: 0 0 15px 0;
}

/* align the logout "link" (button in form) of the navbar */
.nav li > form > button.logout {
    padding: 15px;
    border: none;
}

@media(max-width:767px) {
    .nav li > form > button.logout {
        display:block;
        text-align: left;
        width: 100%;
        padding: 10px 15px;
    }
}

.nav > li > form > button.logout:focus,
.nav > li > form > button.logout:hover {
    text-decoration: none;
}

.nav > li > form > button.logout:focus {
    outline: none;
}

/*SILEX:info
kartik date range filter
\SILEX:info*/
.date-range-input {
    min-width: 53ch;
}

/*Pour les astérisques sur les champs obligatoires dans les formulaires*/
/*SILEX:required*/
form div.required label.control-label:after {
  content:" * ";
  color:red;
}
/*\SILEX:required*/

.ul_tiret {
   list-style-type: none;
}
.li_tiret:before {
   content: '- ';
}

/*CSS Loader*/
/*SILEX:loader*/
.loader {
  border: 10px solid #f3f3f3;
  border-radius: 50%;
  border-top: 10px solid blue;
  border-right: 10px solid green;
  border-bottom: 10px solid orangered;
  width: 50px;
  height: 50px;
  -webkit-animation: spin 2s linear infinite;
  animation: spin 2s linear infinite;
}

@-webkit-keyframes spin {
  0% { -webkit-transform: rotate(0deg); }
  100% { -webkit-transform: rotate(360deg); }
}

@keyframes spin {
  0% { transform: rotate(0deg); }
  100% { transform: rotate(360deg); }
}
/*\SILEX:loader*/

table.properties-widget > tbody > tr > th:first-letter {
    text-transform: capitalize;
}

.variables-select-link {
    color: #000;
    opacity: 0.4;
}

.variables-select-link:hover {
    color: #555555;
    opacity: 1;
    text-decoration: none;
}

.info-box {
    font-style: italic;
    width: 100%;
    margin-top: 5px;
    padding: 5px;
    padding-left: 10px;
    display: block;
    border-radius: 5px;
}

.info-box:before {
    content: "\f05a";
    font-style: normal;
    font-family: FontAwesome;
    margin-right: 5px;
}

.toast-top-right {
    margin-top: 50px;
}

.select2-container--krajee.select2-container--disabled .select2-selection, .select2-container--krajee.select2-container--disabled .select2-search__field {
    cursor: default;
}

.disabled.update-variables,
.disabled.update-variables:hover,
.disabled.update-variables:visited,
.disabled.update-variables:focus {
    background-color: #333333;
    border: 1px solid #ccc;
}

#login-overlay {
    position: fixed;
    width: 100%;
    height: 100%;
    top: 0;
    left: 0;
    opacity: 0;
    visibility: hidden;
    -webkit-transition: opacity 0.5s, visibility 0s 0.5s;
    transition: opacity 0.5s, visibility 0s 0.5s;
    background: rgba(0,0,0,0.6);
    z-index: 2000;
}

#login-overlay form {
    top: 45%;
    -webkit-transform: translateY(-50%);
    transform: translateY(-50%);
    position: relative;
    margin: auto;
    width: 650px;
    background-color: #fff;
    padding: 15px;
    padding-left: 25px;
    border-radius: 5px;
}

#login-overlay form h2 {
    margin-top: 0;
}

#login-overlay form .login-button {
    margin-left: 15%;
}

#login-overlay.login-demo .login-button {
    margin-left: 0;
    text-align: center;
    margin-top: 15px;
    margin-bottom: 15px;
}

#login-overlay.login-demo .login-button > div {
    margin-top: 5px;
}

#login-overlay.login-demo .login-button button, 
#login-overlay.login-demo .login-button a,
#login-overlay.login-demo .login-button button:focus, 
#login-overlay.login-demo .login-button a:focus {
    border: none;
    color: rgb(51, 122, 183);
    background-color: transparent;
}

#login-overlay.login-demo .login-button a:hover {
    text-decoration: none;
}

#login-overlay.login-demo h2 {
    font-size: 20px;
    font-weight: bold;
}

#login-overlay.login-demo .fields {
    display: none;
}

#login-overlay.login-demo .expiration-message {
    display: none;
    text-align: center;
    font-weight: bold;
    color: red;
}

